--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 
                     <h2 id="top">Топ-15 доставок продуктов в Москве</h2>
                     
-</div><div class="restaurant-card"><h2>Купер</h2>
+<div class="restaurant-card"><h2>Купер</h2>
 <p>Сервис доставки Купер предлагает быструю доставку продуктов, товаров из аптек и ресторанов прямо к двери. Удобный способ заказать всё необходимое в одном месте. Компания работает круглосуточно и обслуживает заказы через сайт и по телефону.</p>
 <p><strong>Адрес ресторана:</strong> Пулковское шоссе, 33, Санкт-Петербург, Россия</p>
 <p><strong>Время работы: круглосуточно</strong></p>
