--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="Если вы ищете лучшую доставку продуктов в Москве , то вы попали по адресу. В Москве множество заведений, предлагающих услуги доставки. Рейтинг и топ, отзывы 2025.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<link rel="icon" href="/logo-icon.png"/>
+	<meta name="yandex-verification" content="a59b47a071e7283b" />
 	<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
